style: fix some issues on dark mode. (#1946)
* fix:  style of ant-input with affix on popup.

* style: support permission request page on dark mode.

* style: spin view improvement on HDManager.

--- a/src/ui/views/RequestPermission/style.less
+++ b/src/ui/views/RequestPermission/style.less
@@ -51,7 +51,7 @@
 .permission-tip {
   font-size: 13px;
   line-height: 20px;
-  color: #4B4D59;
+  color: var(--r-neutral-body);
   width: 470px;
   margin-top: 20px;
   margin-bottom: 0;
